minimalist-login/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700&family=Open+Sans:wght@300;600&display=swap');
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    height: 100vh;
    font-family: 'Lato', sans-serif;
    color: #fff;
    display: flex;
    justify-content: center;
    align-items: center;
    background: rgb(195,34,182);
    background: linear-gradient(0deg, rgba(195,34,182,1) 0%, rgba(191,79,221,1) 21%, rgba(154,129,222,1) 65%, rgba(90,99,232,1) 100%); 
}

main {
    width: 60vw;
    max-width: 40em;
    height: 80vh;
    max-height: 70em;
    border-radius: 1em;
}

.container {
    width: 100%;
    height: 100%;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
}

.logo {
    text-align: center;
   
}

.logo span {
    display: inline-block;
    font-weight: 100;
    font-size: 1.2em;
   vertical-align: sub;
}
.icon-text {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 8px;
}

form {
    width: 100%;
    padding: 2.5em 2.5em 0 2.5em;
    margin: 0 auto;
}

label {
    background: gray;
}

.textfield, .submit-btn {
    display: block;
    margin: 1em 0;
    width: 100%;
    padding: 0.6em 0 0.6em 0.5em;
    border: 0;
    border-radius: 12px;
    font-size: 1rem;
}
.submit-btn {
    color: #000;
    background: #fff;
    border: 1px solid transparent;
}
.submit-btn:hover {
    background: radial-gradient(circle, rgba(230,105,160,1) 0%, rgba(215,144,233,1) 100%); 
    border: 1px solid rgba(215,144,233,1);
    color: #fff;
}

.forgot-pw_link {
    margin-top: -4em;
}

.link {
    text-decoration: none;
    color: inherit;
    font-weight: 700;
}

.link:hover {
    text-decoration: underline;
}

